@@ -1,6 +1,3 @@
-CONSOLE MESSAGE: ArrayBuffer is deprecated in XMLHttpRequest.send(). Use ArrayBufferView instead.
-CONSOLE MESSAGE: ArrayBuffer is deprecated in XMLHttpRequest.send(). Use ArrayBufferView instead.
-CONSOLE MESSAGE: ArrayBuffer is deprecated in XMLHttpRequest.send(). Use ArrayBufferView instead.
 
 PASS setRequestHeader("") sends a blank string
 PASS setRequestHeader(" ") sends the string " "
@@ -15,23 +12,21 @@ PASS HTML Document request respects setRequestHeader("")
 PASS HTML Document request has correct default Content-Type of "text/html;charset=UTF-8"
 PASS HTML Document request keeps setRequestHeader() Content-Type, with charset adjusted to UTF-8
 PASS Blob request respects setRequestHeader("") to be specified
-FAIL Blob request with unset type sends no Content-Type without setRequestHeader() call assert_equals: expected "" but got "content-type: "
+FAIL Blob request with unset type sends no Content-Type without setRequestHeader() call assert_equals: expected "" but got "Content-Type: application/x-www-form-urlencoded\n"
 PASS Blob request with unset type keeps setRequestHeader() Content-Type and charset
+PASS Blob request with set type respects setRequestHeader("") to be specified
 PASS Blob request with set type uses that it for Content-Type unless setRequestHeader()
 PASS Blob request with set type keeps setRequestHeader() Content-Type and charset
 PASS ArrayBuffer request respects setRequestHeader("")
-FAIL ArrayBuffer request sends no Content-Type without setRequestHeader() call assert_equals: expected "" but got "content-type: application/x-www-form-urlencoded"
+FAIL ArrayBuffer request sends no Content-Type without setRequestHeader() call assert_equals: expected "" but got "Content-Type: application/x-www-form-urlencoded\n"
 PASS ArrayBuffer request keeps setRequestHeader() Content-Type and charset
 PASS ArrayBufferView request respects setRequestHeader("")
-FAIL ArrayBufferView request sends no Content-Type without setRequestHeader() call assert_equals: expected "" but got "content-type: application/x-www-form-urlencoded"
+FAIL ArrayBufferView request sends no Content-Type without setRequestHeader() call assert_equals: expected "" but got "Content-Type: application/x-www-form-urlencoded\n"
 PASS ArrayBufferView request keeps setRequestHeader() Content-Type and charset
 PASS FormData request respects setRequestHeader("")
-PASS FormData request has correct default Content-Type of "multipart/form-data;boundary=_"
+PASS FormData request has correct default Content-Type of "multipart/form-data; boundary=_"
 PASS FormData request keeps setRequestHeader() Content-Type and charset
 PASS URLSearchParams respects setRequestHeader("")
-FAIL URLSearchParams request has correct default Content-Type of "application/x-www-form-urlencoded;charset=UTF-8" assert_equals: expected "content-type: application/x-www-form-urlencoded;charset=utf-8" but got "content-type: text/plain;charset=utf-8"
+PASS URLSearchParams request has correct default Content-Type of "application/x-www-form-urlencoded;charset=UTF-8"
 PASS URLSearchParams request keeps setRequestHeader() Content-Type, with charset adjusted to UTF-8
-PASS ReadableStream request respects setRequestHeader("")
-FAIL ReadableStream request with under type sends no Content-Type without setRequestHeader() call assert_equals: expected "" but got "content-type: text/plain;charset=utf-8"
-FAIL ReadableStream request keeps setRequestHeader() Content-Type and charset assert_equals: expected "content-type: application/xml;charset=ascii" but got "content-type: application/xml;charset=utf-8"
 
